# bma250-screen-autorotator

./: .gitignore  README.md  cleanup.sh  configure.ac
src/: Makefile.am  autorotator.c  i2c_bma250.c  i2c_bma250.h  xinput_rotate.c  xinput_rotate.h  xrandr_rotate.c  xrandr_rotate.h
